--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
-search_algorithm: ga  # Options: local_search, iterative_local_search, simulated_annealing, pso, ga
-cost_function: revenue  # Options: sphere, schwefel, schaffer, griewank, func7, func8, func9, func11, revenue
+search_algorithm: generalized_neighborhood_search  # Options: local_search, iterative_local_search, simulated_annealing, pso, ga
+cost_function: schwefel  # Options: sphere, schwefel, schaffer, griewank, func7, func8, func9, func11, revenue
 dimension: 2
 x_initial: null  # A d-dimensional list, such as [1.0, -1.0], or null. If null, the x_initial will be a random point in the domain.
 
@@ -36,3 +36,17 @@ ga:
   population_size: 10  # Number of individuals (candidate solutions) in each generation/iteration of the GA
   mutation_rate: 0.1  # The probability that a new offspring will undergo mutation
   crossover_rate: 0.8  # The probability that two selected individuals (parents) will undergo crossover to produce offspring
+
+variable_neighborhood_search:
+  max_itr_vns: 100
+  max_itr_ls: 200
+  convergence_threshold: 0.001
+  k_max: 16 
+
+generalized_neighborhood_search:
+  max_itr_vns: 50
+  max_itr_ls: 200
+  convergence_threshold: 0.001
+  k_max: 8 
+  layers: 4
+  
